--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "styled-components": "3.1.4",
-    "styled-is": "1.1.2"
+    "styled-is": "1.1.2",
+    "tag-hoc": "^1.0.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.5.0",
